--- a/.gitignore
+++ b/.gitignore
@@ -170,7 +170,7 @@ dmypy.json
 
 ### except some folders
 /data/configs
-/data/config_results/**/*.conf
+/data/config_results
 /data/*.csv
 /memtier_benchmark
 
